chore(ci): configure sonar cloud